# selenium_grid_tests

./: .gitignore  README.md  pyproject.toml
app_data/export/: 2024-05-18_172924.csv
deployment/: docker-compose.yml  docker_up_report.sh  docker_up_selenium.sh  docker_up_test.sh  inspect.txt  up_all.sh  up_report.sh  up_selenium.sh  up_test.sh
scripts/: run_reports_server.sh  run_website_tests.sh  wait_for_grid.sh
src/simbirsoft/: __init__.py  __main__.py  configuration.py  export.py  models.py  utils.py
src/simbirsoft/pages/: __init__.py  account.py  customer.py  login.py  page.py  transactions.py
src/simbirsoft/tests/: fixtures.py  test_configuration.py  test_export.py  test_models.py  test_utils.py  test_website.py
